--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       </div>
       <button type="submit" class="btn">Add!</button>
     </form>
+    <div id="output">
+
+    </div>
   </div>
 </body>
 </html>
